# weekend_agent

./: .dockerignore  .gitignore  .replit  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  response.md  scraped.md  temp.py
config/: config.json  feature_flags.json  user_info.json
data/: config.json  user_info.json
tests/: test_event_ranker.py  test_main.py
weekend_fun/: date_extractor.py  email_sender.py  event_finder.py  event_ranker.py  feature_flag.py  user_manager.py  utils.py
